# telepath

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  cog.toml  release-plz.toml  renovate.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  firmware.yml  fmt.yml  host.yml  msrv.yml  release-binaries.yml  release-nudge.yml  release-plz.yml  token-expiry-check.yml  tools.yml
crates/telepath-firmware/: Cargo.toml  README.md  build.rs
crates/telepath-firmware/src/: lib.rs  transport.rs
crates/telepath-firmware/tests/: discovery_paging.rs  discovery_smoke.rs  macro_smoke.rs  registry_smoke.rs
crates/telepath-host/: Cargo.toml  README.md
crates/telepath-host/src/: lib.rs
crates/telepath-host/tests/: loopback.rs
crates/telepath-macros/: Cargo.toml
crates/telepath-macros/src/: lib.rs
crates/telepath-wire/: Cargo.toml  README.md
crates/telepath-wire/src/: cmd_id.rs  framing.rs  lib.rs
docs/: mcp-integration.md  release-plz-changelog-template.md.draft  releasing.md
examples/host-emulator/: Cargo.toml  README.md
examples/host-emulator/src/: loopback.rs  main.rs
examples/host-pty-server/: Cargo.toml  README.md
examples/host-pty-server/src/: main.rs
examples/loopback-demo/: Cargo.toml  README.md
examples/loopback-demo/src/: loopback.rs  main.rs
examples/nrf52840-dk/: Cargo.toml  README.md  build.rs  memory.x
examples/nrf52840-dk/.cargo/: config.toml
examples/nrf52840-dk/src/: main.rs  rtt_transport.rs
examples/nrf52840-ping/: Cargo.toml  README.md
examples/nrf52840-ping/.cargo/: config.toml
examples/nrf52840-ping/src/: main.rs  rtt_transport.rs
telepath-client/: Cargo.toml  README.md
telepath-client/src/: lib.rs  rtt_transport.rs  serial_transport.rs
telepath-client/tests/: loopback.rs
telepath-macros/: Cargo.toml  README.md
telepath-macros/src/: lib.rs
telepath-server/: Cargo.toml  README.md  linkme.x
telepath-server/src/: lib.rs  profile.rs  resource.rs
telepath-server/tests/: cpu_commands_contract.rs  discovery_paging.rs  discovery_smoke.rs  macro_smoke.rs  nrf52840_sensors_contract.rs  registry_smoke.rs  resource_smoke.rs
telepath-wire/: Cargo.toml  README.md
telepath-wire/src/: cmd_id.rs  framing.rs  lib.rs  metrics.rs
tools/telepath/: Cargo.toml  README.md
tools/telepath-cli/: Cargo.toml  README.md
tools/telepath-cli/src/: main.rs  rtt_transport.rs
tools/telepath-mcp-server/: Cargo.toml  README.md
tools/telepath-mcp-server/e2e/: package-lock.json  package.json  playwright.config.ts
tools/telepath-mcp-server/e2e/tests/: inspector.spec.ts  mcp.spec.ts
tools/telepath-mcp-server/src/: bridge.rs  json_to_postcard.rs  lib.rs  main.rs  postcard_to_json.rs  rtt_transport.rs  schema_to_json.rs  server.rs
tools/telepath-mcp-server/src/transports/: mod.rs  rtt.rs  serial.rs
tools/telepath-mcp-server/tests/: cpu_commands_e2e.rs  end_to_end_loopback.rs  json_postcard_roundtrip.rs  nrf52840_sensors_e2e.rs  resources_prompts.rs  schema_to_json_table.rs  serial_pty_smoke.rs
tools/telepath-shell/: Cargo.toml  README.md
tools/telepath-shell/src/: main.rs  postcard_to_json.rs  rtt_transport.rs
tools/telepath/src/: bridge.rs  cli.rs  lib.rs  main.rs  transport.rs
tools/telepath/src/cmd/: mcp.rs  mod.rs  shell.rs
tools/telepath/src/codec/: json_to_postcard.rs  mod.rs  postcard_to_json.rs  schema_to_json.rs
tools/telepath/src/mcp/: mod.rs  server.rs
tools/telepath/tests/: cpu_commands_e2e.rs  end_to_end_loopback.rs  json_postcard_roundtrip.rs  nrf52840_sensors_e2e.rs  resources_prompts.rs  schema_to_json_table.rs  serial_pty_smoke.rs
tools/telepath/tests/helpers/: mod.rs
