[workspace]
resolver = "2"
members = [
    "telepath-wire",
    "telepath-macros",
    "telepath-server",
    "telepath-client",
    "examples/loopback-demo",
]
exclude = ["examples/nrf52840-ping", "tools/telepath-shell", "tools/telepath-mcp-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tarotene/telepath"

[workspace.dependencies]
telepath-wire = { path = "telepath-wire" }
telepath-macros = { path = "telepath-macros" }
telepath-server = { path = "telepath-server" }
telepath-client = { path = "telepath-client" }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
linkme = { version = "0.3", default-features = false }
postcard-schema = { version = "0.2", default-features = false, features = ["derive"] }
