[workspace]
resolver = "3"
members = [
    "telepath-wire",
    "telepath-macros",
    "telepath-server",
    "telepath-client",
    "examples/host-pty-server",
]
exclude = ["examples/nrf52840-ping", "tools/telepath"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tarotene/telepath"
publish = false
rust-version = "1.88"

[workspace.dependencies]
telepath-wire = { path = "telepath-wire", version = "0.2", default-features = false }
telepath-macros = { path = "telepath-macros", version = "0.2" }
telepath-server = { path = "telepath-server", version = "0.2" }
telepath-client = { path = "telepath-client", version = "0.2" }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
linkme = { version = "0.3", default-features = false }
postcard-schema = { version = "0.2", default-features = false, features = ["derive", "heapless-v0_9"] }
heapless = { version = "0.9", default-features = false, features = ["serde"] }
