[package]
name = "telepath-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side Telepath RPC client library (std)"

[features]
rtt = ["dep:probe-rs"]
serial = ["dep:serialport"]

[dependencies]
telepath-wire = { workspace = true }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
cobs = "0.2"
postcard-schema = { workspace = true, features = ["use-std"] }
anyhow = "1"
# probe-rs 0.31 is the latest stable release (2026-01-17). Pin to this minor.
probe-rs = { version = "0.31", optional = true }
serialport = { version = "4", optional = true }

[dev-dependencies]
telepath-server = { workspace = true }
