[package]
name = "telepath-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = true
description = "Host-side Telepath RPC client library (std)"
readme = "README.md"
keywords = ["embedded", "rpc", "probe-rs", "rtt", "serial"]
categories = ["embedded", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true

[features]
rtt = ["dep:probe-rs"]
serial = ["dep:serialport"]
profile = ["telepath-wire/profile"]

[dependencies]
telepath-wire = { workspace = true }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
cobs = "0.5"
postcard-schema = { workspace = true, features = ["use-std"] }
anyhow = "1"
# probe-rs 0.31 is the latest stable release (2026-01-17). Pin to this minor.
probe-rs = { version = "0.31", optional = true }
serialport = { version = "4", optional = true }

[dev-dependencies]
telepath-server = { workspace = true }
