[package]
name = "telepath-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = true
description = "Proc-macro crate for Telepath (#[command] attribute)"
readme = "README.md"
keywords = ["embedded", "rpc", "proc-macro", "telepath"]
categories = ["development-tools::procedural-macro-helpers", "embedded"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
telepath-wire = { workspace = true, default-features = false }
