[package]
name = "telepath-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Target-side Telepath RPC server library (no_std)"
build = "build.rs"

[dependencies]
telepath-wire = { workspace = true }
telepath-macros = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
linkme = { workspace = true }
postcard-schema = { workspace = true }
cortex-m = { version = "0.7", optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }

[dev-dependencies]
heapless = { workspace = true }

[features]
default = []
profile = ["dep:cortex-m", "dep:portable-atomic", "telepath-wire/profile"]
