[package]
name = "telepath-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = true
description = "Target-side Telepath RPC server library (no_std)"
readme = "README.md"
keywords = ["embedded", "rpc", "no-std", "nrf52", "cortex-m"]
categories = ["embedded", "no-std"]
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
telepath-wire = { workspace = true }
telepath-macros = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
linkme = { workspace = true }
postcard-schema = { workspace = true }
cortex-m = { version = "0.7", optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }

[dev-dependencies]
heapless = { workspace = true }

[features]
default = []
profile = ["dep:cortex-m", "dep:portable-atomic", "telepath-wire/profile"]
