[package]
name = "telepath-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared wire protocol types for Telepath (no_std, no alloc)"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
cobs = { version = "0.2", default-features = false }

[features]
default = []
