[package]
name = "telepath-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared wire protocol types for Telepath (no_std, no alloc)"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
cobs = { version = "0.5", default-features = false }
rzcobs = { version = "0.1", default-features = false }
postcard-schema = { workspace = true, optional = true }

[features]
default = []
profile = ["dep:postcard-schema"]
