[package]
name = "telepath-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = true
description = "Shared wire protocol types for Telepath (no_std, no alloc)"
readme = "README.md"
keywords = ["embedded", "rpc", "no-std", "wire-protocol", "postcard"]
categories = ["embedded", "no-std", "encoding"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
cobs = { version = "0.5", default-features = false }
rzcobs = { version = "0.1", default-features = false }
postcard-schema = { workspace = true, optional = true }

[features]
default = []
profile = ["dep:postcard-schema"]
