[package]
name = "telepath-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side Telepath library (std)"

[dependencies]
telepath-wire = { workspace = true }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
cobs = "0.2"

[dev-dependencies]
telepath-firmware = { workspace = true }
postcard-schema = { workspace = true, features = ["use-std"] }
