[package]
name = "telepath-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro crate for Telepath (#[command] attribute)"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
