[package]
name = "host-emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-process emulator: telepath host + firmware on the same OS, no hardware"

[[bin]]
name = "host-emulator"
path = "src/main.rs"

[dependencies]
telepath-wire     = { workspace = true }
telepath-firmware = { workspace = true }
telepath-host     = { path = "../../crates/telepath-host" }
postcard          = { version = "1", features = ["alloc"] }
