[package]
name = "host-pty-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Host-side Telepath server deployment over a PTY pair (parallel to nrf52840-ping)"

[[bin]]
name = "host-pty-server"
path = "src/main.rs"

[features]
# host-pty-server has no DWT; enable server-side profile only when telepath-client
# also has profile enabled, so bench-pty can still collect host-side timing.
profile = ["telepath-server/profile"]

[dependencies]
telepath-wire   = { workspace = true }
telepath-server = { workspace = true }
postcard        = { version = "1", features = ["alloc"] }
heapless        = { workspace = true }
anyhow          = "1"
nix             = { version = "0.29", features = ["term", "fs"] }
