[package]
name = "nrf52840-dk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nrf52840-dk"
path = "src/main.rs"

[dependencies]
telepath-firmware = { path = "../../crates/telepath-firmware" }

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.3", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true
