[package]
name = "telepath-mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server that exposes Telepath commands as MCP tools (workspace-excluded)"

[[bin]]
name = "telepath-mcp-server"
path = "src/main.rs"

[lib]
name = "telepath_mcp_server"
path = "src/lib.rs"

[dependencies]
telepath-client = { path = "../../telepath-client" }
telepath-wire   = { path = "../../telepath-wire" }
telepath-server = { path = "../../telepath-server" }
postcard        = { version = "1", features = ["alloc"] }
postcard-schema = { version = "0.2", features = ["use-std"] }
rmcp            = { version = "1", features = ["server", "transport-io", "macros"] }
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
clap            = { version = "4", features = ["derive", "env"] }
thiserror       = "1"
probe-rs        = "0.31"
serialport      = "4"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
nix             = "0.26"
