[package]
name = "telepath-mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server that exposes Telepath commands as MCP tools (workspace-excluded)"

[[bin]]
name = "telepath-mcp-server"
path = "src/main.rs"

[lib]
name = "telepath_mcp_server"
path = "src/lib.rs"

[features]
default = ["loopback", "rtt"]
loopback = ["dep:telepath-server"]
rtt = ["dep:probe-rs"]

[dependencies]
telepath-client = { path = "../../telepath-client" }
telepath-wire   = { path = "../../telepath-wire" }
telepath-server = { path = "../../telepath-server", optional = true }
postcard        = { version = "1", features = ["alloc"] }
postcard-schema = { version = "0.2", features = ["use-std", "heapless-v0_8"] }
heapless        = { version = "0.8", default-features = false, features = ["serde"] }
rmcp            = { version = "1", features = ["server", "transport-io", "macros"] }
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
clap            = { version = "4", features = ["derive", "env"] }
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# probe-rs 0.31 is the latest stable release (2026-01-17).
# Pin to this minor to avoid unexpected API breaks.
probe-rs = { version = "0.31", optional = true }
