[package]
name = "telepath-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Interactive shell for a Telepath server: RTT-attached REPL and one-shot commands"

[[bin]]
name = "telepath-shell"
path = "src/main.rs"

[dependencies]
telepath-client = { path = "../../telepath-client" }
telepath-wire = { path = "../../telepath-wire" }
postcard = { version = "1", features = ["alloc"] }
postcard-schema = { version = "0.2", features = ["use-std"] }
serde = "1"
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
rustyline = "15"
# probe-rs 0.31 is the latest stable release (2026-01-17).
# Pin to this minor to avoid unexpected API breaks.
probe-rs = "0.31"
