[package]
name = "telepath"
version = "0.1.0"
edition = "2021"
resolver = "3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tarotene/telepath"
description = "Unified CLI for Telepath: interactive shell and MCP server"
publish = false
rust-version = "1.88"

[[bin]]
name = "telepath"
path = "src/main.rs"

[lib]
name = "telepath"
path = "src/lib.rs"

[features]
default = ["shell", "mcp", "rtt"]
shell = ["dep:rustyline"]
mcp = ["dep:rmcp", "dep:tokio", "dep:tracing", "dep:tracing-subscriber"]
rtt = ["dep:probe-rs", "telepath-client/rtt"]
serial = ["telepath-client/serial"]
profile = ["telepath-client/profile", "telepath-wire/profile"]

[dependencies]
telepath-client = { path = "../../telepath-client" }
telepath-wire   = { path = "../../telepath-wire" }
postcard        = { version = "1", features = ["alloc"] }
postcard-schema = { version = "0.2", features = ["use-std", "heapless-v0_9"] }
heapless        = { version = "0.9", default-features = false, features = ["serde"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
clap            = { version = "4", features = ["derive", "env"] }
thiserror       = "2"

# Optional: shell
rustyline = { version = "17", optional = true }

# Optional: mcp
rmcp               = { version = "1", features = ["server", "transport-io", "macros"], optional = true }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"], optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Optional: rtt
probe-rs = { version = "0.31", optional = true }

[dev-dependencies]
telepath-server = { path = "../../telepath-server" }
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "io-util"] }
rmcp            = { version = "1", features = ["client", "transport-child-process"] }

[workspace]
